--- a/nativeClient.html
+++ b/nativeClient.html
@@ -1,4 +1,13 @@
 <script>
     let ws =new WebSocket("ws://localhost:8000")
     console.log(ws)
+
+    ws.onopen=(event)=>{
+        console.log(event)
+        ws.send("I am connected to the server")
+    }
+    ws.onmessage=(message)=>{
+        console.log(message.data)
+    }
+
 </script>
